# Gum

./: .gitignore  AGENTS.md  Cargo.toml  README.md  backup.sh
.github/workflows/: ci.yml  release-pypi.yml  sdk-build.yml  sdk-publish.yml
THE-REAL-WEBSITE-V2/src/app/: globals.css  layout.tsx  page.tsx
THE-REAL-WEBSITE-V2/src/app/about/: page.tsx
THE-REAL-WEBSITE-V2/src/components/: hero-code-panel.tsx  site-header.tsx  use-cases-panel.tsx
api/: __init__.py  find_dispatcher.py  finder.py  launcher.py  main.py  models.py  pyproject.toml  scaler.py  storage.py
api/routers/: jobs.py  webhooks.py
api/tests/: test_find_dispatcher.py  test_finder.py  test_job_api.py
crates/gum-admin/: Cargo.toml
crates/gum-admin/src/: main.rs
crates/gum-api/: Cargo.toml
crates/gum-api/src/: app_state.rs  handlers.rs  lib.rs  main.rs  routes.rs  secret_store.rs  service.rs
crates/gum-api/tests/: flow.rs
crates/gum-queue/: Cargo.toml
crates/gum-queue/src/: lib.rs
crates/gum-runner/: Cargo.toml
crates/gum-runner/src/: execution.rs  lib.rs  main.rs  runner_loop.rs
crates/gum-runner/tests/: timeout_execution.rs
crates/gum-scheduler/: Cargo.toml
crates/gum-scheduler/src/: main.rs  probes.rs
crates/gum-store/: Cargo.toml
crates/gum-store/migrations/: 0001_slice1.sql  0002_scheduler.sql  0003_runner_liveness.sql  0004_control_leases_and_compute_classes.sql  0005_cancel_revoke.sql  0006_provider_health.sql  0007_retry_policy.sql  0008_function_health.sql  0009_run_keys.sql  0010_memory_resources.sql  0011_cpu_resources.sql  0012_required_secrets.sql  0013_deploy_runtime_spec.sql
crates/gum-store/src/: lib.rs  memory.rs  models.rs  pg.rs  queries.rs
crates/gum-types/: Cargo.toml
crates/gum-types/src/: lib.rs
crates/mx8-coordinator/: Cargo.toml
crates/mx8-coordinator/src/: main.rs
crates/mx8-core/src/: types.rs
crates/mx8-find-media/: Cargo.toml  README.md  build.rs  wrapper.h
crates/mx8-find-media/src/: lib.rs
crates/mx8-proto/proto/: mx8.proto
crates/mx8-wire/src/: lib.rs
crates/mx8d-agent/: Cargo.toml
crates/mx8d-agent/src/: main.rs
deploy/fly/: Dockerfile.api  Dockerfile.runner  Dockerfile.scheduler  api.fly.toml  runner.fly.toml  scheduler.fly.toml
docs/: ARCHITECTURE.md  FLY_STAGING_SETUP.md  GUM_ARCHITECTURE.md  GUM_BETA_7_DAY_CHECKLIST.md  GUM_CLI_FIRST_SECRET_FLOW.md  GUM_COMPUTE_INHERITANCE.md  GUM_COMPUTE_PROVIDER_ADAPTERS.md  GUM_CONCURRENCY.md  GUM_CONTRACT.md  GUM_DUPLICATION_INVARIANTS.md  GUM_EXECUTION_SEMANTICS.md  GUM_FUNCTION_HEALTH.md  GUM_IMPLEMENTATION_SLICE_1.md  GUM_KEY.md  GUM_KNOB_DESIGN.md  GUM_LOCAL_EXP_PLAN.md  GUM_OPS_RUNBOOK.md  GUM_PROVIDER_HEALTH.md  GUM_READY_FOR_CUSTOMERS_CHECKLIST.md  GUM_SECRET_STORE_ADAPTERS.md  GUM_V1.md  GUM_ZERO_DOWNTIME_MIGRATION_PLAYBOOK.md  PYPI_RELEASE.md  RUST_STYLE.md  api_shape.md  celery_fastapi_django_redis_leads_60.csv  celery_fastapi_django_redis_leads_60.md  celery_leads_us_eu_remote_na.csv  celery_leads_us_eu_remote_na.md  celery_leads_us_eu_remote_na_fresh_2026-04-29.csv  celery_leads_us_eu_remote_na_fresh_2026-04-29.md  celery_leads_us_eu_remote_na_strict.md  find_modal_deploy.md  find_v1.md  gum_need_check_ranked.csv  v0_spec.md  yc_2024_2026_batches_manifest.md  yc_2024_2026_gum_need_check.csv  yc_2024_2026_gum_need_check_30plus.csv  yc_2024_2026_gum_need_check_30plus.md  (+1 more)
docs-site/: README.md  docs.json  index.mdx  quickstart.mdx
docs-site/concepts/: jobs.mdx  runs-attempts.mdx
docs-site/guides/: admin-cli.mdx  deploy.mdx  enqueue.mdx  resend-scheduled-email.mdx  schedules.mdx  zero-to-production.mdx
docs-site/knobs/: concurrency.mdx  cpu.mdx  every.mdx  key.mdx  memory.mdx  rate-limits.mdx  retries.mdx  timeout.mdx
docs-site/reference/: environment.mdx  statuses.mdx
examples/resend-scheduled-email/: .env.example  README.md  jobs.py
inference/: modal_find_worker.py
inference/tests/: test_modal_find_worker.py
scripts/: beta_onboarding_smoke.sh  fly_runner_capacity_sync.sh  fly_staging_up.sh  ops_checks_local.sh  pypi_release.sh  scrape_yc_2024_2026.py  staging_soak.sh
sdk/: README.md  mypy.ini  pyproject.toml  pyrightconfig.json
sdk/gum/: __init__.py  auth.py  cli.py  client.py  deploy.py  job.py  provisioning.py  runtime.py
sdk/mx8/: __init__.py  client.py  job.py  work.py
sdk/mx8/transforms/: __init__.py  _base.py  audio.py  image.py  pipeline.py  video.py
sdk/tests/: test_auth.py  test_cli.py  test_deploy.py  test_gum_job.py  test_provisioning.py  test_runtime.py  test_secrets_hygiene.py
website/: package-lock.json  package.json
website/scripts/: dev-reset.sh
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/book-demo/: page.tsx
website/src/app/docs/: page.tsx
website/src/components/: copyable-command.tsx  hero-code-panel.tsx  install-command-bar.tsx  site-header.tsx  sleepy-cat-artifact.tsx  use-cases-panel.tsx
