[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mx8-media-api"
version = "0.1.0"
description = "MX8 media API service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "pydantic>=2.7,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
packages = []
