[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mx8"
version = "2.0.1"
description = "MX8 media SDK"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["media", "transforms", "video", "image", "audio", "batch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ekom2004/mx8-media"
Repository = "https://github.com/Ekom2004/mx8-media"

[project.scripts]
mx8 = "mx8.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mx8*"]
