[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gum"
version = "0.1.0"
description = "Gum background jobs SDK"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["background-jobs", "jobs", "queue", "scheduling", "retries"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://usegum.io"
Repository = "https://github.com/ekomotu/gum"

[project.scripts]
gum = "gum.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gum*"]
