[package]
name = "gum-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
gum-types = { path = "../gum-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
gum-api = { path = "../gum-api" }
gum-store = { path = "../gum-store" }
