[package]
name = "gum-scheduler"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
gum-api = { path = "../gum-api" }
gum-store = { path = "../gum-store" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
